products/ photo-wrapper

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
         <!-- PRODUCTS SECTION -->
         <section class="products-section container">
-            <div class="products section-narrow">
+            < class="products section-narrow">
                 <!-- Caption background -->
                 <div class="caption">
                     <h2 class="caption_text">Наші <span class="visually-hidden">гелієві</span> кульки</h2>
@@ -278,24 +278,24 @@
                         <li class="products__gallery-item">
                             <img src="/images/index/jpg/card2.jpg" alt="">
                         </li>
-                        <p class="products__gallery-text">На вас чекає асортимент карнавальної продукції до Нового року, Halloween та Дня народження.</p>
                     </ul>
+                    <p class="products__gallery-text">На вас чекає асортимент карнавальної продукції до Нового року, Halloween та Дня народження.</p>
                 </figure>
 
                 <!-- Block 5 -->
                 <h3 class="products__title products__title--type5">Оформлення кульками</h3>
-                <div class="products__carousel photo-container">
-                    <figure class="photo-wrapper">
-                        <img class="products__carousel-item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo1">
-                        <img class="products__carousel-item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo2">
-                        <img class="products__carousel-item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo3">
-                        <img class="products__carousel-item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo4">
-                        <img class="products__carousel-item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo5">
-                    </figure>      
-                </div>          
-                <div class="products__carousel-textblock">
-                    <p class="products__carousel-text">Оформлення кульками - чудовий спосіб залучити потенційних клієнтів під час відкриття чи проведення рекламних компаній.</p>
-                    <p class="products__carousel-text">Вартість розраховується, залежно від складності встановлення, якості кульок, довжини арки та терміновості роботи.</p>
+                <div class="products__photo-wrapper">
+                <figure class="products__photo-wrapper_list">
+                    <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo1">
+                    <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo2">
+                    <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo3">
+                    <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo4">
+                    <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo5">
+                </figure> 
+                </div>
+                <div class="products__photo-wrapper_textblock">
+                    <p class="products__photo-wrapper_text">Оформлення кульками - чудовий спосіб залучити потенційних клієнтів під час відкриття чи проведення рекламних компаній.</p>
+                    <p class="products__photo-wrapper_text">Вартість розраховується, залежно від складності встановлення, якості кульок, довжини арки та терміновості роботи.</p>
                 </div>
             </div>            
         </section>
