--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
         <!-- PRODUCTS SECTION -->
         <section class="products-section container">
-            < class="products section-narrow">
+            <div class="products section-narrow">
                 <!-- Caption background -->
                 <div class="caption">
                     <h2 class="caption_text">Наші <span class="visually-hidden">гелієві</span> кульки</h2>
@@ -284,8 +284,8 @@
 
                 <!-- Block 5 -->
                 <h3 class="products__title products__title--type5">Оформлення кульками</h3>
-                <div class="products__photo-wrapper">
-                <figure class="products__photo-wrapper_list">
+                <div class="products__photo-container">
+                <figure class="products__photo-wrapper">
                     <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo1">
                     <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo2">
                     <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo3">
