Products section - title

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         </figure>
                     </li>
 
-                    <li class="card products-card products__section--type2">
+                    <li class="card products__section--type2">
                         <figure class="card__figure">
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
@@ -191,7 +191,7 @@
                         </figure>
                     </li>
 
-                    <li class="card products-card products__section--type3">
+                    <li class="card products__section--type3">
                         <figure class="card__figure">
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
@@ -213,7 +213,7 @@
                         </figure>
                     </li>
 
-                    <li class="card products-card products__section--type2">
+                    <li class="card products__section--type2">
                         <figure class="card__figure">
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
@@ -222,7 +222,7 @@
                         </figure>
                     </li>
 
-                    <li class="card products-card products__section--type3">
+                    <li class="card products__section--type3">
                         <figure class="card__figure">
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
@@ -234,7 +234,7 @@
 
                 <!-- Block 3 -->
                 <h3 class="products__title products__title--type3">Кульки на день народження</h3>
-                <ul class="products__list products__list link">
+                <ul class="products__list link">
                     <li class="card products__section">
                         <figure>
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
@@ -244,7 +244,7 @@
                         </figure>
                     </li>
 
-                    <li class="card products-card products__section--type2">
+                    <li class="card products__section--type2">
                         <figure class="card__figure">
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
@@ -253,7 +253,7 @@
                         </figure>
                     </li>
 
-                    <li class="card products-card products__section--type3">
+                    <li class="card products__section--type3">
                         <figure class="card__figure">
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
