--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <!-- Block 1 -->
                 <h3 class="products__title products__title--type1">Гелієві кульки для закоханих</h3>
                 <ul class="products__list link">
-                    <li class="card products__section">
+                    <li class="card products__section--type1">
                         <figure>
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
@@ -204,7 +204,7 @@
                 <!-- Block 2 -->
                 <h3 class="products__title products__title--type2">Повітряні кульки для вашої малечі</h3>
                 <ul class="products__list products__list--average link">
-                    <li class="card products__section">
+                    <li class="card products__section--type1">
                         <figure>
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
@@ -235,7 +235,7 @@
                 <!-- Block 3 -->
                 <h3 class="products__title products__title--type3">Кульки на день народження</h3>
                 <ul class="products__list link">
-                    <li class="card products__section">
+                    <li class="card products__section--type1">
                         <figure>
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
