--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
                 </div>
                 
                 <!-- Block 1 -->
-                <h3 class="products__title products__title--type1">Гелієві кульки для закоханих</h3>
+                <h3 class="products__title products__title--type1"><span class="text-hidden">Гелієві</span> кульки для закоханих</h3>
                 <ul class="products__list link">
                     <li class="card products__section--type1">
                         <figure>
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
-                                <h4 class="card__title">Кульки на дівич-вечір</h4>
+                                <h4 class="card__title"><span class="card__title--hidden">Кульки</span> на дівич-вечір</h4>
                             </figcaption>
                         </figure>
                     </li>
@@ -186,7 +186,7 @@
                         <figure class="card__figure">
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
-                                <h4 class="card__title--type2">Кульки з серцями, кульки на весілля</h4>
+                                <h4 class="card__title card__title--type2">Кульки з серцями, кульки на весілля</h4>
                             </figcaption>
                         </figure>
                     </li>
@@ -202,13 +202,13 @@
                 </ul>
 
                 <!-- Block 2 -->
-                <h3 class="products__title products__title--type2">Повітряні кульки для вашої малечі</h3>
+                <h3 class="products__title products__title--type2"><span class="text-hidden">Повітряні</span> кульки для вашої малечі</h3>
                 <ul class="products__list products__list--average link">
                     <li class="card products__section--type1">
                         <figure>
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
-                                <h4 class="card__title--type2">Кульки на виписку з пологового будинку</h4>
+                                <h4 class="card__title card__title--type2">Кульки на виписку з пологового будинку</h4>
                             </figcaption>
                         </figure>
                     </li>
@@ -217,7 +217,7 @@
                         <figure class="card__figure">
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
-                                <h4 class="card__title--type2">Кульки на перший рочок хлопчику</h4>
+                                <h4 class="card__title card__title--type2">Кульки на перший рочок хлопчику</h4>
                             </figcaption>
                         </figure>
                     </li>
@@ -226,7 +226,7 @@
                         <figure class="card__figure">
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
-                                <h4 class="card__title--type2">Кульки на 1-й рочок дівчинки</h4>
+                                <h4 class="card__title card__title--type2">Кульки на 1-й рочок дівчинки</h4>
                             </figcaption>
                         </figure>
                     </li>
@@ -239,7 +239,7 @@
                         <figure>
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
-                                <h4 class="card__title--type2">Кульки на дитячий день народження</h4>
+                                <h4 class="card__title card__title--type2">Кульки на дитячий день народження</h4>
                             </figcaption>
                         </figure>
                     </li>
@@ -248,7 +248,7 @@
                         <figure class="card__figure">
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
-                                <h4 class="card__title--type2">Фольговані кульки, цифри та фігури</h4>
+                                <h4 class="card__title card__title--type2">Фольговані кульки, цифри та фігури</h4>
                             </figcaption>
                         </figure>
                     </li>
@@ -257,7 +257,7 @@
                         <figure class="card__figure">
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
-                                <h4 class="card__title--type2">Сети з кульок для вишуканих пані</h4>
+                                <h4 class="card__title card__title--type2">Сети з кульок для вишуканих пані</h4>
                             </figcaption>
                         </figure>
                     </li>
