--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
                 <!-- Block 2 -->
                 <h3 class="products__title products__title--type2"><span class="text-hidden">Повітряні</span> кульки для вашої малечі</h3>
-                <ul class="products__list products__list--average link">
+                <ul class="products__list products__list-indent link">
                     <li class="card products__section--type1">
                         <figure>
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
@@ -234,7 +234,7 @@
 
                 <!-- Block 3 -->
                 <h3 class="products__title products__title--type3">Кульки на день народження</h3>
-                <ul class="products__list link">
+                <ul class="products__list products__list-indent link">
                     <li class="card products__section--type1">
                         <figure>
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
