--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 </ul>
 
                 <!-- Block 4 -->
-                <h3 class="products__title products__title--type4">Карнавальна продукція та товари для свята</h3> 
+                <h3 class="products__title products__title--type4">Карнавальна продукція <span class="products__title--hidden">та товари для свята</span></h3> 
                 <figure class="products__gallery">
                     <ul class="products__gallery-list link">
                         <li class="products__gallery-item">
@@ -284,15 +284,41 @@
 
                 <!-- Block 5 -->
                 <h3 class="products__title products__title--type5">Оформлення кульками</h3>
-                <div class="products__photo-container">
-                <figure class="products__photo-wrapper">
-                    <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo1">
-                    <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo2">
-                    <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo3">
-                    <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo4">
-                    <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo5">
-                </figure> 
+                <!-- <div class="products__photo-container">
+                    <figure class="products__photo-wrapper">
+                        <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo1">
+                        <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo2">
+                        <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo3">
+                        <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo4">
+                        <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo5">
+                    </figure> 
+                </div> -->
+
+                <!-- <div class="products__photo-container">
+                    <div class="products__photo-slider">
+                        <div class="products__photo-wrapper">
+                            <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo1">
+                            <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo2">
+                            <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo3">
+                            <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo4">
+                            <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo5">
+                        </div>
+                    </div>
+                </div> -->
+
+                <div class="slider-container">
+                    <div class="slider">
+                        <div class="slide"><img src="/images/index/jpg/card2.jpg" alt="Slide 1"></div>
+                        <div class="slide"><img src="/images/index/jpg/card2.jpg" alt="Slide 2"></div>
+                        <div class="slide"><img src="/images/index/jpg/card2.jpg" alt="Slide 3"></div>
+                        <div class="slide"><img src="/images/index/jpg/card2.jpg" alt="Slide 4"></div>
+                        <div class="slide"><img src="/images/index/jpg/card2.jpg" alt="Slide 5"></div>
+                    </div>
+                    <button class="prev">Previous</button>
+                    <button class="next">Next</button>
                 </div>
+
+
                 <div class="products__photo-wrapper_textblock">
                     <p class="products__photo-wrapper_text">Оформлення кульками - чудовий спосіб залучити потенційних клієнтів під час відкриття чи проведення рекламних компаній.</p>
                     <p class="products__photo-wrapper_text">Вартість розраховується, залежно від складності встановлення, якості кульок, довжини арки та терміновості роботи.</p>
@@ -300,10 +326,53 @@
             </div>            
         </section>
 
+        <!-- ABOUT US SECTION -->
+        <section class="about-section container">
+            <div class="about section-narrow">
+                <div class="caption">
+                    <h2 class="caption_text">Про нас</h2>                    
+                </div>
+
+                <div class="about__image">
+                    <img class="about__image--left" src="" alt="" width="896" height="1200">
+                </div>
+
+                <ul class="about__list link">
+                    <li class="about__list-item">
+                        <div class="about__item-area">
+                            <p class="about__item-text">Гелієві кульки та товари для свята завжди були близькими нашому серцю. Бачити щирі посмішки на обличчі людей, створювати для них гарний настрій та залишати приємні враження від своєї роботи - мрія кожної людини.</p>
+                        </div>    
+                    </li>
+
+                    <li>
+                        <div class="about__item-area">
+                            <p class="about__item-text">В якійсь мірі, створення композицій з повітряних кульок - це творчий процес. Саме тому, ми розпочали свою діяльність ще на початку 2011 року. Йшли роки, були зміни локацій, проходив творчий розвиток, здобувався відповідний досвід.</p>
+                        </div>
+                    </li>
+
+                    <li class="about__list-item">
+                        <div class="about__item-area">
+                            <p class="about__item-text">З часом наш магазин став відомим широкому колу лучан. Нас завжди з великою радістю відвідують діти та молодь. Окрім надування гелієвих кульок, створення з них композицій для фотозон, у нас ви також можете знайти різноманітні товари для свята.</p>
+                        </div>
+                    </li>
+
+                    <li class="about__list-item">
+                        <div class="about__item-area">
+                            <p class="about__item-text">фольговані фігури для дітей; латексні кульки в асортименті;</p>
+                        </div>
+                    </li>
+                </ul>
+
+                <div class="about__image">
+                    <img class="about__image--right" src="" alt="" width="896" height="1200">
+                </div>
+            </div>
+        </section>
+
     </main>
     
     <script src="/js/carousel.js"></script>
     <script src="/js/call.js"></script>
-    <script src="/js/photo-container.js"></script>
+    <script src="/js/photo-wrapper.js"></script>
 </body>
 </html>
