--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div class="header_section">
 
             <figure class="header_image carousel">
-                <img src="/images/index/jpg/hero_mac@2x.jpg" alt="Дівчина несе по центру Луцька гелієві кульки" id="photo1">
-                <img src="/images/index/jpg/hero2_mac@2x.jpg" alt="Дівчина з гелієвими кульками біля авто" id="photo2">
-                <img src="/images/index/jpg/hero3_mac@2x.jpg" alt="Дівчина з гелієвими кульками та бокалом вина дивиться на Луцьк" id="photo3">
-                <img src="/images/index/jpg/hero4_mac@2x.jpg" alt="Дівчина приймає в подарунок гелієві кульки та квіти" id="photo4">
+                <img src="/images/index/jpg/hero_mac@2x.jpg" alt="Дівчина несе по центру Луцька гелієві кульки" id="photo1" loading="eager">
+                <img src="/images/index/jpg/hero2_mac@2x.jpg" alt="Дівчина з гелієвими кульками біля авто" id="photo2" loading="lazy">
+                <img src="/images/index/jpg/hero3_mac@2x.jpg" alt="Дівчина з гелієвими кульками та бокалом вина дивиться на Луцьк" id="photo3" loading="lazy">
+                <img src="/images/index/jpg/hero4_mac@2x.jpg" alt="Дівчина приймає в подарунок гелієві кульки та квіти" id="photo4" loading="lazy">
                 <figcaption class="visually-hidden">Дівчата з гелієвими кульками</figcaption>
             </figure>
 
@@ -175,7 +175,7 @@
                 <ul class="products__list link">
                     <li class="card products__section--type1">
                         <figure>
-                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір" loading="lazy">
                             <figcaption>
                                 <h4 class="card__title"><span class="card__title--hidden">Кульки</span> на дівич-вечір</h4>
                             </figcaption>
@@ -184,7 +184,7 @@
 
                     <li class="card products__section--type2">
                         <figure class="card__figure">
-                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір" loading="lazy">
                             <figcaption>
                                 <h4 class="card__title card__title--type2">Кульки з серцями, кульки на весілля</h4>
                             </figcaption>
@@ -193,7 +193,7 @@
 
                     <li class="card products__section--type3">
                         <figure class="card__figure">
-                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір" loading="lazy">
                             <figcaption>
                                 <h4 class="card__title">Гендерні кульки</h4>
                             </figcaption>
@@ -206,7 +206,7 @@
                 <ul class="products__list products__list-indent link">
                     <li class="card products__section--type1">
                         <figure>
-                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір" loading="lazy">
                             <figcaption>
                                 <h4 class="card__title card__title--type2">Кульки на виписку з пологового будинку</h4>
                             </figcaption>
@@ -215,7 +215,7 @@
 
                     <li class="card products__section--type2">
                         <figure class="card__figure">
-                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір" loading="lazy">
                             <figcaption>
                                 <h4 class="card__title card__title--type2">Кульки на перший рочок хлопчику</h4>
                             </figcaption>
@@ -224,7 +224,7 @@
 
                     <li class="card products__section--type3">
                         <figure class="card__figure">
-                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір" loading="lazy">
                             <figcaption>
                                 <h4 class="card__title card__title--type2">Кульки на 1-й рочок дівчинки</h4>
                             </figcaption>
@@ -237,7 +237,7 @@
                 <ul class="products__list products__list-indent link">
                     <li class="card products__section--type1">
                         <figure>
-                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір" loading="lazy">
                             <figcaption>
                                 <h4 class="card__title card__title--type2">Кульки на дитячий день народження</h4>
                             </figcaption>
@@ -246,7 +246,7 @@
 
                     <li class="card products__section--type2">
                         <figure class="card__figure">
-                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір" loading="lazy">
                             <figcaption>
                                 <h4 class="card__title card__title--type2">Фольговані кульки, цифри та фігури</h4>
                             </figcaption>
@@ -255,7 +255,7 @@
 
                     <li class="card products__section--type3">
                         <figure class="card__figure">
-                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір" loading="lazy">
                             <figcaption>
                                 <h4 class="card__title card__title--type2">Сети з кульок для вишуканих пані</h4>
                             </figcaption>
@@ -268,15 +268,15 @@
                 <figure class="products__gallery">
                     <ul class="products__gallery-list link">
                         <li class="products__gallery-item">
-                            <img src="/images/index/jpg/card2.jpg" alt="">
+                            <img src="/images/index/jpg/card2.jpg" alt="" loading="lazy">
                         </li>
 
                         <li class="products__gallery-item--average">
-                            <img src="" alt="">
+                            <img src="" alt="" loading="lazy">
                         </li>
 
                         <li class="products__gallery-item">
-                            <img src="/images/index/jpg/card2.jpg" alt="">
+                            <img src="/images/index/jpg/card2.jpg" alt="" loading="lazy">
                         </li>
                     </ul>
                     <p class="products__gallery-text">На вас чекає асортимент карнавальної продукції до Нового року, Halloween та Дня народження.</p>
@@ -308,11 +308,11 @@
 
                 <div class="slider-container">
                     <div class="slider">
-                        <div class="slide"><img src="/images/index/jpg/card2.jpg" alt="Slide 1"></div>
-                        <div class="slide"><img src="/images/index/jpg/card2.jpg" alt="Slide 2"></div>
-                        <div class="slide"><img src="/images/index/jpg/card2.jpg" alt="Slide 3"></div>
-                        <div class="slide"><img src="/images/index/jpg/card2.jpg" alt="Slide 4"></div>
-                        <div class="slide"><img src="/images/index/jpg/card2.jpg" alt="Slide 5"></div>
+                        <div class="slide"><img src="/images/index/jpg/card2.jpg" alt="Slide 1" loading="lazy"></div>
+                        <div class="slide"><img src="/images/index/jpg/card2.jpg" alt="Slide 2" loading="lazy"></div>
+                        <div class="slide"><img src="/images/index/jpg/card2.jpg" alt="Slide 3" loading="lazy"></div>
+                        <div class="slide"><img src="/images/index/jpg/card2.jpg" alt="Slide 4" loading="lazy"></div>
+                        <div class="slide"><img src="/images/index/jpg/card2.jpg" alt="Slide 5" loading="lazy"></div>
                     </div>
                     <button class="prev">Previous</button>
                     <button class="next">Next</button>
@@ -333,8 +333,8 @@
                     <h2 class="caption_text">Про нас</h2>                    
                 </div>
 
-                <div class="about__image">
-                    <img class="about__image--left" src="" alt="" width="896" height="1200">
+                <div class="about__image about__image--left">
+                    <img src="" alt="" loading="lazy">
                 </div>
 
                 <ul class="about__list link">
@@ -363,8 +363,8 @@
                     </li>
                 </ul>
 
-                <div class="about__image">
-                    <img class="about__image--right" src="" alt="" width="896" height="1200">
+                <div class="about__image about__image--right">
+                    <img src="" alt="" loading="lazy">
                 </div>
             </div>
         </section>
