--- a/index.html
+++ b/index.html
@@ -338,27 +338,40 @@
                 </div>
 
                 <ul class="about__list link">
-                    <li class="about__list-item">
-                        <div class="about__item-area">
-                            <p class="about__item-text">Гелієві кульки та товари для свята завжди були близькими нашому серцю. Бачити щирі посмішки на обличчі людей, створювати для них гарний настрій та залишати приємні враження від своєї роботи - мрія кожної людини.</p>
+                    <li class="about__list-item about__item--1">
+                        <div class="about__item-area about__area--1">
+                            <p class="about__item-text">Гелієві кульки та товари для свята завжди були близькими нашому серцю.</p>
+                            <p class="about__item-text">Бачити щирі посмішки на обличчі людей, створювати для них гарний настрій та залишати приємні враження від своєї роботи - мрія кожної людини.</p>
                         </div>    
                     </li>
 
-                    <li>
-                        <div class="about__item-area">
-                            <p class="about__item-text">В якійсь мірі, створення композицій з повітряних кульок - це творчий процес. Саме тому, ми розпочали свою діяльність ще на початку 2011 року. Йшли роки, були зміни локацій, проходив творчий розвиток, здобувався відповідний досвід.</p>
+                    <li class="about__list-item about__item--2">
+                        <div class="about__item-area about__area--2">
+                            <p class="about__item-text">В якійсь мірі, створення композицій з повітряних кульок - це творчий процес.</p>
+                            <p class="about__item-text">Саме тому, ми розпочали свою діяльність ще на початку 2011 року.</p>
+                            <p class="about__item-text">Йшли роки, були зміни локацій, проходив творчий розвиток, здобувався відповідний досвід.</p>
                         </div>
                     </li>
 
-                    <li class="about__list-item">
-                        <div class="about__item-area">
-                            <p class="about__item-text">З часом наш магазин став відомим широкому колу лучан. Нас завжди з великою радістю відвідують діти та молодь. Окрім надування гелієвих кульок, створення з них композицій для фотозон, у нас ви також можете знайти різноманітні товари для свята.</p>
+                    <li class="about__list-item about__item--3">
+                        <div class="about__item-area about__area--3">
+                            <p class="about__item-text">З часом наш магазин став відомим широкому колу лучан. Нас завжди з великою радістю відвідують діти та молодь.</p>
+                            <p class="about__item-text">Окрім надування гелієвих кульок, створення з них композицій для фотозон, у нас ви також можете знайти різноманітні товари для свята.</p>
                         </div>
                     </li>
 
-                    <li class="about__list-item">
-                        <div class="about__item-area">
-                            <p class="about__item-text">фольговані фігури для дітей; латексні кульки в асортименті;</p>
+                    <li class="about__list-item about__item--4">
+                        <div class="about__item-area about__area--4">
+                            <ul>
+                                <li><p class="about__item-text">фольговані фігури для дітей;</p></li>
+                                <li><p class="about__item-text">латексні кульки в асортименті;</p></li>
+                                <li><p class="about__item-text">карнавальна атрибутика;</p></li>
+                                <li><p class="about__item-text">свічки в торт, ковпачки;</p></li>
+                                <li><p class="about__item-text">святковий посуд;</p></li>
+                                <li><p class="about__item-text">кольоровий дим, хлопавки;</p></li>
+                                <li><p class="about__item-text">подарункові пакети та коробочки;</p></li>
+                                <li><p class="about__item-text">послуги з пакування подарунків.</p></li>
+                            </ul>                          
                         </div>
                     </li>
                 </ul>
