About section - finish

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <source srcset="/images/index/webp/logo_mob.webp 1x, /images/index/webp/logo_mob@2x.webp 2x" media="(min-width: 390px)" type="image/webp">   
                 <source srcset="/images/index/png/logo_mob.png 1x, /images/index/png/logo_mob@2x.png 2x" media="(min-width: 390px)">
 
-                <img src="/images/index/png/logo_mob.png" alt="Логотип компанії Гелієві кульки Луцьк">
+                <img src="/images/index/png/logo_mob.png" alt="Логотип компанії Гелієві кульки Луцьк" loading="eager">
             </picture>
 
 
@@ -333,9 +333,7 @@
                     <h2 class="caption_text">Про нас</h2>                    
                 </div>
 
-                <div class="about__image about__image--left">
-                    <img src="" alt="" loading="lazy">
-                </div>
+                <div class="about__image about__image--left"></div>
 
                 <ul class="about__list link">
                     <li class="about__list-item about__item--1">
@@ -353,12 +351,17 @@
                         </div>
                     </li>
 
+                    <img class="about__mob-image about__mob-image-top" src="/images/index/jpg/about_mob-top.jpg" alt="Фото магазину товарів для свята у Луцьку" loading="lazy">
+
+
                     <li class="about__list-item about__item--3">
                         <div class="about__item-area about__area--3">
                             <p class="about__item-text">З часом наш магазин став відомим широкому колу лучан. Нас завжди з великою радістю відвідують діти та молодь.</p>
                             <p class="about__item-text">Окрім надування гелієвих кульок, створення з них композицій для фотозон, у нас ви також можете знайти різноманітні товари для свята.</p>
                         </div>
                     </li>
+
+                    <img class="about__mob-image about__mob-image-bottom"src="/images/index/jpg/about_mob-bottom.jpg" alt="Фото магазину гелієвих кульок у Луцьку" loading="lazy">
 
                     <li class="about__list-item about__item--4">
                         <div class="about__item-area about__area--4">
@@ -376,9 +379,7 @@
                     </li>
                 </ul>
 
-                <div class="about__image about__image--right">
-                    <img src="" alt="" loading="lazy">
-                </div>
+                <div class="about__image about__image--right"></div>
             </div>
         </section>
 
